# projects

Bookstore/: readme.txt
Bookstore/source/: CMakeLists.txt  databasehandler.h  exc.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Letters/: letters.c  readme.txt  text.txt
Semaphore/: c  client.c  readme.txt  s  server.c  shm.h
Shell/: readme.txt  shell.c
Tranzistors/: readme.txt
Tranzistors/source/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  tranz.h
